<resources>
    <string name="app_name">NoteTakingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_message"> No text notes to display here </string>
    <string name="image">image</string>
    <string name="your_notes">Your Notes</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="welcome_to_the_notes_app">Welcome to the Notes App</string>
    <string name="this_is_the_image_displayed_when_the_notes_is_empty">This is the image displayed when the notes is empty</string>
    <string name="enter_your_title_here">Enter your Title here</string>
    <string name="enter_your_description_here">Enter your Description here</string>
    <string name="update_notes">Update Notes</string>
    <string name="search">Search</string>
    <string name="notestitle">NotesTitle</string>
    <string name="type_something">Type Something</string>
    <string name="createnote">CreateNote</string>
    <string name="in_the_notes_app_users_can_create_new_notes_by_clicking_an_fab_button_which_opens_a_screen_to_input_the_note_s_title_and_content_they_can_view_all_saved_notes_in_a_list_format_read_select_and_edit_notes_to_update_their_content_update_and_delete_notes_by_swiping_or_tapping_a_delete_icon_delete_this_allows_users_to_efficiently_manage_their_notes_with_full_crud_functionality">In the notes app, users can create new notes by clicking an fab button, which opens a screen to input the note\'s title and content. They can view all saved notes in a list format (Read), select and edit notes to update their content (Update), and delete notes by swiping or tapping a delete icon (Delete). This allows users to efficiently manage their notes with full CRUD functionality.</string>
    <string name="next">Next</string>
    <string name="string_pinnotes">Pin Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="finish">Finish</string>
    <string name="edit_note">Edit Note.</string>
    <string name="created_date">Created Date</string>
    <string name="when_user_made_a_long_click_on_notes_user_can_view_the_bottom_navigation_menu_in_that_user_can_pin_the_notes">When user made a long click on Notes ,User can view the bottom navigation menu in that user can pin the notes.</string>
    <string name="when_the_user_performs_a_long_click_on_a_note_a_bottom_navigation_bar_will_appear_allowing_them_to_assign_a_priority_level_to_the_note_such_as_high_or_low_priority">When the user performs a long click on a note, a bottom navigation bar will appear, allowing them to assign a priority level to the note, such as high or low priority.</string>
    <string name="lowpriority">lowpriority</string>
    <string name="highpriority">highpriority</string>
    <string name="pinname">pinname</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="images">images</string>
    <string name="username">username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Prompt</string>
    <string name="login">to get started sign in with google</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">skip</string>
</resources>

